# deepvac-hub

./: .dockerignore  .gitignore  README.md  alembic.ini  compose.yaml  pyproject.toml
.claude/: settings.json
apps/api/: dependencies.py  error_handlers.py  main.py  middleware.py
apps/api/routers/: activation.py  devices.py  health.py  licenses.py
apps/web/: app.py  audit.py  errors.py  extensions.py
apps/web/activate/: __init__.py  routes.py
apps/web/auth/: __init__.py  forms.py  routes.py  session.py
apps/web/dashboard/: __init__.py  routes.py
apps/web/licenses/: __init__.py  forms.py  routes.py
apps/web/organizations/: __init__.py  forms.py  routes.py
docker/: api.Dockerfile  tools.Dockerfile  web.Dockerfile
docs/: architecture.md  database-erd.md  deployment.md  license-format.md  privacy.md  sequences.md  threat-model.md
migrations/: env.py
migrations/versions/: 26ce5ddc18e1_initial_schema.py  fa66924fa288_drop_seat_limit_and_seat_assignments.py
nginx/: nginx.conf
scripts/: create_admin.py  generate_signing_key.py  seed_development.py
src/licensing/: config.py  database.py  exceptions.py  pagination.py
tests/: conftest.py  factories.py
tests/integration/: test_auth_flow.py  test_health.py  test_licenses_routes.py  test_organizations_routes.py  test_users_routes.py
tests/security/: test_cross_org_access.py  test_no_key_leak.py  test_privacy_boundary.py
tests/unit/: test_activation_service.py  test_auth_service.py  test_license_signing.py  test_licenses_service.py  test_models.py  test_organizations_service.py  test_users_service.py
(+52 files in other folders)
